# agentd

./: .cargo-env  .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  rust-toolchain.toml
.agent/rules/: agentd-research.md
.github/: branch-protection.md
.github/workflows/: gates.yml
.sisyphus/evidence/: chat-approval-inbox-iteration2.txt  chat-artifact-preview-iteration7-raw.txt  chat-artifact-preview-iteration7-snapshot.md  chat-artifact-preview-iteration7.txt  chat-attachment-preview-iteration8-route-replay.json  chat-attachment-preview-iteration8-sample.tsx  chat-attachment-preview-iteration8-snapshot.md  chat-attachment-preview-iteration8.txt  chat-follow-up-suggestions-iteration5.txt  chat-message-branching-iteration6.txt  chat-reasoning-sources-iteration3.txt  chat-tool-approval-inline-iteration4.txt  chat-tool-lifecycle-streaming-iteration1.txt  f1-plan-compliance.json  f2-code-quality.json  f3-real-qa-replay.json  f4-scope-fidelity.json  final-wave-f1-plan-compliance.txt  final-wave-f2-code-quality.txt  final-wave-f3-qa-replay.txt  final-wave-f4-scope-fidelity.txt  preflight-real-oneapi-error.txt  task-1-gh-create.txt  task-1-gh-fallback.txt  task-1-invalid-transport.txt  task-1-preflight-happy.txt  task-1-preflight-health-error.txt  task-1-preflight-missing-token-error.txt  task-1-valid-load.txt  task-10-create-list-error.txt  task-10-create-list-happy.txt  task-10-fs-tools.txt  task-10-policy-deny-bypass-error.txt  task-10-policy-deny-happy.txt  task-11-inspect-happy.json  task-11-inspect-notfound-error.txt  task-11-search-tools.txt  task-11-usage-error.txt  task-11-usage-happy.txt  task-12-delete-happy.json  (+105 more)
.sisyphus/notepads/agentd-mvp-implementation-execution-plan/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/mvp-real-llm-closure/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/post-mvp-chat-agent-loop/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: agentd-mvp-implementation-execution-plan.md  mvp-real-llm-closure.md  roadmap-v1.md
configs/: agentd.toml
configs/agents/: example.toml
configs/mcp-servers/: mcp-fs.toml  mcp-git.toml  mcp-search.toml  mcp-shell.toml
crates/agentctl/: Cargo.toml
crates/agentctl/src/: main.rs  tui.rs
crates/agentd-core/: Cargo.toml
crates/agentd-core/src/: audit.rs  error.rs  lib.rs  policy.rs  profile.rs
crates/agentd-core/tests/: policy_contracts.rs
crates/agentd-daemon/: Cargo.toml
crates/agentd-daemon/src/: cgroup.rs  firecracker.rs  lifecycle.rs  main.rs  mcp.rs  ws_bridge.rs
crates/agentd-protocol/: Cargo.toml
crates/agentd-protocol/src/: lib.rs  rpc.rs  v1.rs
crates/agentd-store/: Cargo.toml
crates/agentd-store/migrations/: 0001_init.sql  0002_one_api_mappings.sql  0003_agent_lifecycle_state.sql  0004_quota_usage_model_breakdown.sql  0005_audit_events.sql  0006_usage_records_window.sql  0007_backfill_audit_context.sql  0008_context_session_snapshots.sql
crates/agentd-store/src/: agent.rs  audit.rs  db.rs  lib.rs  one_api.rs  usage.rs
images/agent-rootfs/: README.md  rootfs-manifest.json
policies/: default.rego
python/agentd-agent-lite/: pyproject.toml
python/agentd-agent-lite/src/agentd_agent_lite/: cli.py  config.py
python/agentd-agent-lite/tests/: test_cli.py  test_compact.py  test_config.py  test_context_migration.py  test_multi_turn.py  test_real_single_turn.py  test_retries.py  test_session_persistence.py  test_session_tree.py  test_third_party_mcp.py  test_tool_discovery.py  test_tool_loop.py
python/agentd-mcp-fs/: pyproject.toml
python/agentd-mcp-fs/src/agentd_mcp_fs/: __init__.py  server.py
python/agentd-mcp-fs/tests/: test_tools.py
python/agentd-mcp-git/: pyproject.toml
python/agentd-mcp-git/src/agentd_mcp_git/: __init__.py  server.py
python/agentd-mcp-git/tests/: test_tools.py
python/agentd-mcp-search/: pyproject.toml
python/agentd-mcp-search/src/agentd_mcp_search/: __init__.py  server.py
python/agentd-mcp-search/tests/: test_tools.py
python/agentd-mcp-shell/: pyproject.toml
python/agentd-mcp-shell/src/agentd_mcp_shell/: __init__.py  server.py
python/agentd-mcp-shell/tests/: test_tools.py
scripts/: bootstrap-repo.sh  gate-check.sh  no-go-guard.sh
scripts/demo/: e2e-demo.sh
scripts/faults/: inject-db-lock-conflict.sh  inject-oneapi-timeout.sh  inject-oom-and-policy-conflict.sh
scripts/firecracker/: build-rootfs.sh  fetch-assets.sh  verify-rootfs.sh  vsock-agent-echo.py
scripts/gates/: assert-anti-mock-evidence.py  phase-a-gate.sh  phase-bc-gate.sh  preflight-real-oneapi.sh  task-18-lite-gate.sh  task-real-closure-gate.sh
scripts/infra/: one-api.sh
scripts/release/: rc-gate.sh
scripts/rollback/: final-rollback.sh  phase-a-rollback.sh
scripts/validate/: agent-card-validate.sh
systemd/: agentd.service
tests/: test_anti_mock_schema.py  test_preflight_real_oneapi.py  test_python_workspace_installation.py
web/agent-shell/: next.config.ts  package.json
web/agent-shell/app/: globals.css  layout.tsx
web/agent-shell/components/: chat-approval-dock.tsx  chat-cockpit-plan.tsx  chat-command-menu.tsx  chat-run-overview.tsx  chat-session-timeline.tsx  shell-nav.tsx
web/agent-shell/lib/: chat-agent-readiness.d.ts  chat-agent-readiness.js  chat-approval-feed.d.ts  chat-approval-feed.js  chat-artifacts.d.ts  chat-artifacts.js  chat-attachments.d.ts  chat-attachments.js  chat-checkpoints.d.ts  chat-checkpoints.js  chat-cockpit-actions.d.ts  chat-cockpit-actions.js  chat-cockpit-plan.d.ts  chat-cockpit-plan.js  chat-command-menu.d.ts  chat-command-menu.js  chat-follow-up-suggestions.d.ts  chat-follow-up-suggestions.js  chat-latest-output.d.ts  chat-latest-output.js  chat-live-activity.d.ts  chat-live-activity.js  chat-message-branches.d.ts  chat-message-branches.js  chat-message-parts.d.ts  chat-message-parts.js  chat-resume-actions.d.ts  chat-resume-actions.js  chat-route-handler.d.ts  chat-route-handler.mjs  chat-run-overview.d.ts  chat-run-overview.js  chat-session-timeline.d.ts  chat-session-timeline.js  (+16 more)
(+73 files in other folders)
