[workspace]
resolver = "2"
members = [
    "crates/agentd-core",
    "crates/agentd-daemon",
    "crates/agentd-protocol",
    "crates/agentd-store",
    "crates/agentctl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["agentd team"]

[workspace.metadata]
description = "System-level AI Agent runtime"

[workspace.dependencies]
agentd-core = { path = "crates/agentd-core" }
agentd-protocol = { path = "crates/agentd-protocol" }
agentd-store = { path = "crates/agentd-store" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.38", features = ["bundled"] }
