[project]
name = "agentd"
version = "0.1.0"
description = "System-level AI Agent runtime"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "python/agentd-agent-lite",
    "python/agentd-mcp-fs",
    "python/agentd-mcp-shell",
    "python/agentd-mcp-search",
    "python/agentd-mcp-git",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = [
    "python/agentd-agent-lite/src",
    "python/agentd-mcp-fs/src",
    "python/agentd-mcp-shell/src",
    "python/agentd-mcp-search/src",
    "python/agentd-mcp-git/src",
]

[tool.basedpyright]
extraPaths = [
    "python/agentd-agent-lite/src",
    "python/agentd-mcp-fs/src",
    "python/agentd-mcp-shell/src",
    "python/agentd-mcp-search/src",
    "python/agentd-mcp-git/src",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
