[project]
name = "agentd"
version = "0.1.0"
description = "System-level AI Agent runtime"
requires-python = ">=3.12"
dependencies = [
    "agentd-agent-lite",
    "agentd-mcp-fs",
    "agentd-mcp-shell",
    "agentd-mcp-search",
    "agentd-mcp-git",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.uv]
package = false

[tool.uv.sources]
agentd-agent-lite = { workspace = true }
agentd-mcp-fs = { workspace = true }
agentd-mcp-shell = { workspace = true }
agentd-mcp-search = { workspace = true }
agentd-mcp-git = { workspace = true }

[tool.uv.workspace]
members = [
    "python/agentd-agent-lite",
    "python/agentd-mcp-fs",
    "python/agentd-mcp-shell",
    "python/agentd-mcp-search",
    "python/agentd-mcp-git",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
norecursedirs = [
    "images/agent-rootfs/out",
    "target",
    "node_modules",
]
pythonpath = [
    "python/agentd-agent-lite/src",
    "python/agentd-mcp-fs/src",
    "python/agentd-mcp-shell/src",
    "python/agentd-mcp-search/src",
    "python/agentd-mcp-git/src",
]

[tool.basedpyright]
extraPaths = [
    "python/agentd-agent-lite/src",
    "python/agentd-mcp-fs/src",
    "python/agentd-mcp-shell/src",
    "python/agentd-mcp-search/src",
    "python/agentd-mcp-git/src",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
