[package]
name = "agentd-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "agentd"
path = "src/main.rs"

[dependencies]
agentd-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
