[package]
name = "agentd-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "agentd"
path = "src/main.rs"

[dependencies]
agentd-core.workspace = true
agentd-protocol.workspace = true
agentd-store.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml = "0.8"
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
mdns-sd = "0.11"
