[project]
name = "agentd-mcp-search"
version = "0.1.0"
description = "Builtin MCP search server baseline for agentd"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
agentd-mcp-search = "agentd_mcp_search.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentd_mcp_search"]
