[project]
name = "agentd-mcp-shell"
version = "0.1.0"
description = "Builtin MCP shell server for agentd"
requires-python = ">=3.12"
dependencies = ["mcp>=1.6.0"]

[project.scripts]
agentd-mcp-shell = "agentd_mcp_shell.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentd_mcp_shell"]
